tests/pass/run/ffi_sokol_native/main.kira
import sokol_gfx as sg

@Main
@Native
function main() {
    sg.sg_isvalid()
    print("sokol ffi")
    return
}
