tests/fail/semantics/unresolved_import/main.kira
import missing as Missing

@Main
function entry() {
    return;
}
